# ailc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  ailc.policy.toml  install.ps1  install.sh
.ailc/: constitution.md
.ailc/api/: baseline.txt
.github/workflows/: ci.yml  release.yml
crates/ailc/: Cargo.toml
crates/ailc-capabilities/: Cargo.toml
crates/ailc-capabilities/src/: ai_security.rs  api_contract.rs  completeness.rs  compliance.rs  design.rs  desktop.rs  diagram.rs  diff_scope.rs  governance.rs  lib.rs  metric.rs  mobile.rs  owasp.rs  release.rs  security_extra.rs  spec_check.rs  spec_gen.rs  store.rs  supply.rs  surface.rs  ui_ux.rs  verify_extra.rs  web_security.rs  workflow_extra.rs
crates/ailc-capabilities/tests/: caps_tests.rs  regression_corpus.rs
crates/ailc-contracts/: Cargo.toml
crates/ailc-contracts/src/: lib.rs
crates/ailc-core/: Cargo.toml
crates/ailc-core/assets/embed/: config.json
crates/ailc-core/assets/osv/: snapshot.json
crates/ailc-core/src/: agent.rs  autofix.rs  fixer.rs  i18n.rs  lib.rs  orchestrator.rs  pipeline.rs  policy.rs  registry.rs  sarif.rs  skills.rs  stack.rs  verify.rs
crates/ailc-core/src/engines/: codeintel.rs  diagram.rs  gate.rs  generator.rs  index.rs  metric.rs  mod.rs  osv.rs  runner.rs  sast.rs  scan.rs  store.rs  surface.rs  walk.rs
crates/ailc-core/tests/: core_tests.rs  taint_all_languages.rs
crates/ailc/examples/: bench.rs
crates/ailc/src/: compliance_wizard.rs  custodian.rs  main.rs  mcp.rs
docs/: C4.md  АРХИТЕКТУРА.md  ГЛОССАРИЙ.md  МОДЕЛЬ-ДАННЫХ.md  СПЕЦИФИКАЦИЯ.md
npm/ailc-mcp/: README.md  package.json
