[package]
name = "ailc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ailc-contracts = { path = "../ailc-contracts" }
model2vec-rs = "0.2.1"
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Точный AST-разбор кода — ОСНОВНОЙ слой CodeIntel (regex остаётся фолбэком для
# языков без грамматики). Компилирует C-грамматики через cc.
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.3"
tree-sitter-dart = "0.2.0"
